Fix overflow of main-content in small screen size

--- a/css/home.css
+++ b/css/home.css
@@ -17,6 +17,7 @@ body {
     top: 0;
     bottom: 0;
     position: absolute;
+    overflow: hidden;
 }
 
 .nav-wrapper {
